ODBC: Fix a memory leak when open() fails.

When connection or login fails, the ODBC SQL driver was leaking memory.
This bug has been present since Qt 4.8 and up.

Task-number: QTBUG-51334
Change-Id: Ie17f3d575a08d47e047a65d1b30af9ce0789b2d0
Reviewed-by: Mark Brand <mabrand@mabrand.nl>

cregit: bfdbfeb01233a76ea36f53c4f4be9014db5d8d86 https://github.com/qt/qtbase/commit/bfdbfeb01233a76ea36f53c4f4be9014db5d8d86