src/sql/drivers/odbc/qsql_odbc.cpp
@@ -10385,6 +10385,9 @@ argument_list|(
 literal|true
 argument_list|)
 expr_stmt|;
+name|cleanup
+argument_list|()
+expr_stmt|;
 return|return
 literal|false
 return|;
@@ -10399,9 +10402,14 @@ argument_list|(
 name|connOpts
 argument_list|)
 condition|)
+block|{
+name|cleanup
+argument_list|()
+expr_stmt|;
 return|return
 literal|false
 return|;
+block|}
 comment|// Create the connection string
 name|QString
 name|connQStr
@@ -10616,6 +10624,9 @@ argument_list|(
 literal|true
 argument_list|)
 expr_stmt|;
+name|cleanup
+argument_list|()
+expr_stmt|;
 return|return
 literal|false
 return|;
@@ -10651,6 +10662,9 @@ name|setOpenError
 argument_list|(
 literal|true
 argument_list|)
+expr_stmt|;
+name|cleanup
+argument_list|()
 expr_stmt|;
 return|return
 literal|false
